# thetaglass

./: .env.example  .gitignore  README.md  ecosystem.config.js  pyproject.toml
assets/: thetaglass-logo-v20.txt  thetaglass-logo.plain.txt  thetaglass-logo.txt
docs/: FINDINGS.md  STATE_MACHINE.md
src/thetaglass/: __init__.py  backfill.py  cli.py  mock.py  settings.py
src/thetaglass/broker/: base.py
src/thetaglass/broker/robinhood/: auth.py  client.py
src/thetaglass/state/: assemble.py  baseline.py  blackscholes.py  compute.py  health.py  identity.py  models.py  volatility.py
src/thetaglass/store/: __init__.py  db.py  schema.py
src/thetaglass/timekeeper/: __init__.py  clock.py  daemon.py  supervisor.py
src/thetaglass/view/: __init__.py  cards.py  chart.py  logo.py  monitor.py  overview.py
tests/: test_blackscholes.py  test_logo.py  test_monitor.py  test_state.py  test_store.py  test_timekeeper.py  test_view.py
tools/: render_logo_gif.py
