[project]
name = "thetaglass"
version = "0.1.0"
description = "A self-hosted theta-decay watchdog for sold-options portfolios. Tracks credit spreads against their own decay curve, scores position health, and alerts on threshold breaches."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "mcp>=1.2",
    "rich>=13.7",
    "typer>=0.12",
    "plotille>=6.0",   # rgb braille charts for the per-position drill-down
    "textual>=8.0",    # the interactive arrow-key monitor (tg monitor)
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
tg = "thetaglass.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/thetaglass"]
